# flare

./: .gitattributes  .gitignore  .gitmodules  Makefile  Readme.md
app/: Cargo.toml
app/src/: allocator.rs  main.rs
app/src/benchmarks/: big_data_bench.rs  dijkstra.rs  kmeans.rs  lr.rs  micro_count.rs  micro_distinct.rs  micro_file_read.rs  micro_filter.rs  micro_group_by.rs  micro_join.rs  micro_map.rs  micro_partition_wise_sample.rs  micro_reduce.rs  micro_sort_by.rs  micro_take.rs  micro_union.rs  micro_zip.rs  mm.rs  mod.rs  pagerank.rs  pearson.rs  social_graph.rs  tc.rs  test0.rs  topk.rs  tpc_h.rs  tri.rs
data_generator/: Cargo.toml
data_generator/src/: main.rs
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  rust-toolchain
enclave/gperftools/base/.deps/: sgx_utils.Plo  spinlock.Plo
enclave/src/: aggregator.rs  allocator.rs  atomicptr_wrapper.rs  basic.rs  common.rs  custom_thread.rs  dependency.rs  lib.rs  mapper.rs  pair.rs  parallel_collection.rs  partitioner.rs  serialization_free.rs  shuffled.rs
enclave/src/benchmarks/: big_data_bench.rs  dijkstra.rs  kmeans.rs  kmeans_.rs  lr.rs  micro_count.rs  micro_distinct.rs  micro_file_read.rs  micro_filter.rs  micro_group_by.rs  micro_join.rs  micro_map.rs  micro_partition_wise_sample.rs  micro_reduce.rs  micro_sort_by.rs  micro_take.rs  micro_union.rs  micro_zip.rs  mm.rs  mod.rs  pagerank.rs  pearson.rs  social_graph.rs  tc.rs  test0.rs  topk.rs  tpc_h.rs  tri.rs
enclave/src/downcast_rs/: mod.rs
enclave/src/dyn_clone/: macros.rs  mod.rs
enclave/src/obliv_comp/: mod.rs  obliv_aggregate.rs  obliv_filter.rs  obliv_group_by.rs  obliv_join.rs
enclave/src/op/: aggregated_op.rs  co_grouped_op.rs  count_op.rs  filter_op.rs  flatmapper_op.rs  fold_op.rs  joined_op.rs  local_file_reader.rs  map_partitions_op.rs  mapper_op.rs  mod.rs  pair_op.rs  parallel_collection_op.rs  partitionwise_sampled_op.rs  reduced_op.rs  shuffled_op.rs  union_op.rs  zip_op.rs
enclave/src/utils/: bounded_priority_queue.rs  mod.rs  random.rs
enclave/src/utils/date/: date_tuple.rs  date_utils.rs  mod.rs  month_tuple.rs
