[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
edition = "2018"
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

native_spark = { path = "../native_spark" }

# serialization
bincode = "1.2.1"
capnp = "0.12.1"
capnp-futures = "0.12.0"
serde = { version = "1.0.106", features = ["rc"] }
serde_closure = "^0.2.9"
serde_derive = "1.0.106"
uriparse = "0.6.1"

async-std = { version = "1.5.0", features = ["attributes"] }
chrono = "0.4.11"
parquet = "0.15.1"
tempfile = "3"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts" }

