[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors", "Xiang Li <Xiang.Leee@outlook.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts" }

vega = { path = "../Submodule-of-SecureSpark" }

# serialization
bincode = "1.2.1"
deepsize = "0.2.0"
serde = { version = "1.0.125", features = ["rc"] }
serde_closure = { git = "https://github.com/AmbitionXiang/serde_closure", branch = "master" }
#serde_closure = { path = "../../../sgx/ported/serde_closure" }
serde_derive = "1.0.125"

# randomness
rand = "0.7"
rand_distr = "0.2"
rand_pcg = "0.2"

ordered-float = "2.0"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../incubator-teaclave-sgx-sdk/sgx_alloc" }
sgx_backtrace = { path = "../incubator-teaclave-sgx-sdk/sgx_backtrace" }
sgx_backtrace_sys = { path = "../incubator-teaclave-sgx-sdk/sgx_backtrace_sys" }
sgx_build_helper = { path = "../incubator-teaclave-sgx-sdk/sgx_build_helper" }
sgx_cov = { path = "../incubator-teaclave-sgx-sdk/sgx_cov" }
sgx_crypto_helper = { path = "../incubator-teaclave-sgx-sdk/sgx_crypto_helper" }
sgx_demangle = { path = "../incubator-teaclave-sgx-sdk/sgx_demangle" }
sgx_libc = { path = "../incubator-teaclave-sgx-sdk/sgx_libc" }
sgx_rand = { path = "../incubator-teaclave-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../incubator-teaclave-sgx-sdk/sgx_rand_derive" }
sgx_serialize = { path = "../incubator-teaclave-sgx-sdk/sgx_serialize" }
sgx_serialize_derive = { path = "../incubator-teaclave-sgx-sdk/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../incubator-teaclave-sgx-sdk/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../incubator-teaclave-sgx-sdk/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../incubator-teaclave-sgx-sdk/sgx_tcrypto_helper" }
sgx_tdh = { path = "../incubator-teaclave-sgx-sdk/sgx_tdh" }
sgx_tkey_exchange = { path = "../incubator-teaclave-sgx-sdk/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../incubator-teaclave-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../incubator-teaclave-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../incubator-teaclave-sgx-sdk/sgx_tse" }
sgx_tseal = { path = "../incubator-teaclave-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../incubator-teaclave-sgx-sdk/sgx_tstd" }
sgx_tunittest = { path = "../incubator-teaclave-sgx-sdk/sgx_tunittest" }
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_ucrypto = { path = "../incubator-teaclave-sgx-sdk/sgx_ucrypto" }
sgx_unwind = { path = "../incubator-teaclave-sgx-sdk/sgx_unwind" }
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts" }