[package]
name = "data_generator"
version = "0.1.0"
authors = ["AmbitionXiang <Xiang.Leee@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vega = { path = "../Submodule-of-SecureSpark" }
bincode = "1.2.1"
serde = { version = "1.0.123", features = ["rc"] }
serde_closure = { git = "https://github.com/AmbitionXiang/serde_closure", branch = "master" }
serde_derive = "1.0.123"

rand = "0.7"
rand_distr = "0.2"
rand_pcg = "0.2"